Se realizan ajustes en calificacionde contrato

--- a/src/app/pages/localiza/contrato/admincontrato/admincontrato.component.html
+++ b/src/app/pages/localiza/contrato/admincontrato/admincontrato.component.html
@@ -38,7 +38,8 @@
             <td>
               <button
                 class="btn btn-primary"
-                (click)="editarContrato(contrato.id_contrato)"                
+                (click)="editarContrato(contrato.id_contrato)" 
+                [disabled]="contrato.estado !== 'CONTRATADO'"               
               >
                 Editar
               </button>
